<resources>
    <string name="app_name">Time Table App</string>
    <string name="tvMain">TimeTable</string>
    <string name="tvDescription">Description</string>
    <string name="title1">Time Table</string>
    <string name="description1">In this you can view your daily timetable</string>
    <string name="title2">Subjects</string>
    <string name="description2">In this you can view your subjects</string>
    <string name="title3">Faculty</string>
    <string name="description3">All the respective subject teachers</string>
    <string name="title4">Resources</string>
    <string name="description4">Resources to help you learn</string>
    <string name="click">View More</string>
    <string name="phone">Phone No</string>
    <string name="email">Email Id</string>
    <string-array name="Week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="subject">
        <item>Database Management System</item>
        <item>Theory of Computation</item>
        <item>System Programming</item>
        <item>Operating Systems</item>
        <item>Computer Networks</item>
        <item>Internet of Things</item>
        <item>Distributed Systems</item>
        <item>Human Computer Interface</item>
        <item>Information Security</item>
    </string-array>
    <string-array name="Monday">
        <item>Database Management System</item>
        <item>Theory of Computation</item>
        <item>Break</item>
        <item>Distributed Systems</item>
        <item>Break</item>
        <item>System Programming</item>
        <item>Human Computer Interface</item>
    </string-array>
    <string-array name="Tuesday">
        <item>Operating Systems</item>
        <item>Internet of Things</item>
        <item>Break</item>
        <item>Computer Networks</item>
        <item>Database Management System</item>
        <item>Break</item>
        <item>Distributed Systems</item>
    </string-array>
    <string-array name="Wednesday">
        <item>Internet of Things</item>
        <item>Operating Systems</item>
        <item>Break</item>
        <item>System Programming</item>
        <item>Computer Networks</item>
        <item>Break</item>
        <item>Information Security</item>
    </string-array>
    <string-array name="Thursday">
        <item>Internet of Things</item>
        <item>Information Security</item>
        <item>Break</item>
        <item>System Programming</item>
        <item>Operating Systems</item>
        <item>Break</item>
        <item>Human Computer Interface</item>
    </string-array>
    <string-array name="Friday">
        <item>Information Security</item>
        <item>Break</item>
        <item>Database Management System</item>
        <item>Computer Networks</item>
        <item>Break</item>
        <item>Human Computer Interface</item>
    </string-array>
    <string-array name="Saturday">
        <item>Self Study</item>
        <item>Break</item>
        <item>Self Study</item>
    </string-array>
    <string-array name="time1">
        <item>8:55AM - 9:50AM</item>
        <item>9:50AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 1:05PM</item>
        <item>1:05PM - 2:00PM</item>
        <item>2:00PM - 2:55PM</item>
        <item>2:55PM - 4:45PM</item>
    </string-array>
    <string-array name="time2">
        <item>8:55AM - 9:50AM</item>
        <item>9:50AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 12:10PM</item>
        <item>12:10PM - 1:05PM</item>
        <item>1:05PM - 2:00PM</item>
        <item>2:00PM - 3:50PM</item>
    </string-array>
    <string-array name="time3">
        <item>8:55AM - 9:50AM</item>
        <item>9:50AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 12:10PM</item>
        <item>12:10PM - 1:05PM</item>
        <item>1:05PM - 2:00PM</item>
        <item>2:00PM - 3:50PM</item>
    </string-array>
    <string-array name="time4">
        <item>8:55AM - 9:50AM</item>
        <item>9:50AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 12:10PM</item>
        <item>12:10PM - 1:05PM</item>
        <item>1:05PM - 2:00PM</item>
        <item>2:00PM - 3:50PM</item>
    </string-array>
    <string-array name="time5">
        <item>8:55AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 12:10PM</item>
        <item>12:10PM - 1:05PM</item>
        <item>1:05PM - 2:00PM</item>
        <item>2:00PM - 3:50PM</item>
    </string-array>
    <string-array name="time6">
        <item>8:55AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 1:05PM</item>
    </string-array>
    <string-array name="TeacherName">
        <item>N. F. Shaikh</item>
        <item>R. A. Khan</item>
        <item>S. K. Wagh</item>
        <item>J. R. Pansare</item>
        <item>R. M. Wahul</item>
        <item>S. R. Khonde</item>
    </string-array>
    <string-array name="TeacherQuality">
        <item>Head of Department</item>
        <item>Professor</item>
        <item>Associate Professor</item>
        <item>Associate Professor</item>
        <item>Associate Professor</item>
        <item>Assistant Professor</item>
    </string-array>
    <string-array name="Shaikh">
        <item>6434456347</item>
        <item>xyz@gmail.com</item>
    </string-array>
    <string-array name="Khan">
        <item>7841686162</item>
        <item>xyz@gmail.com</item>
    </string-array>
    <string-array name="Wagh">
        <item>7837527277</item>
        <item>xyz@gmail.com</item>
    </string-array>
    <string-array name="Pansare">
        <item>7737373777</item>
        <item>xyz@gmail.com</item>
    </string-array>
    <string-array name="Wahul">
        <item>7353745414</item>
        <item>xyz@gmail.com</item>
    </string-array>
    <string-array name="Khonde">
        <item>9644775377</item>
        <item>xyz@gmail.com</item>
    </string-array>
    <string-array name="SP">
        <item>Definition of a Project, Project versus Flow type work, Project Lifecycle, Processes and Knowledge Areas in Project Management (PM), Build or Buy decision, Work Breakdown Structure (WBS) and its types, Introduction to PMBOK, Program and Portfolio Management.</item>
        <item>Project Planning: Steps for Project Planning, PERT and Gantt Charts, Gantt Project, Microsoft Project and Primavera Project Management Software, Objectives of Activity planning, Project Schedules, Activities, Sequencing and Scheduling, Network Planning Models, Formulating Network Model.</item>
        <item>Objectives of Activity Planning, Project Schedules, Activities : Sequencing and Scheduling, Network Planning Models, Formulating Network Model, Activity relationships (FS,SF,SS,FF), Forward Pass and Backward Pass techniques, Critical Path concept and remedies</item>
        <item>Introduction, Collection of Project data, Visualizing progress, Cost monitoring, Earned Value Analysis, Project tracking, Change Control, Software Configuration Management, Managing contracts, Contract Management.</item>
        <item>Predictive versus Empirical Management, Comparison between Non-Agile and Agile Project, Three stages of Agile Project, Estimation, Scope Management, Roles and Responsibilities, Scheduling and Tracking</item>
        <item>Managing People, Organizational behaviour, Best methods of Staff Selection, Motivation, The Oldham, Hackman job characteristic Model, Stress, Health and Safety, Ethical and Professional concerns, Working in Teams, Decision Making, Organizational structures, Dispersed and Virtual Teams, Communications Genres, Communication Plans</item>
        <item>1. Bob Hughes, Mike Cotterell and Rajib Mall, Software Project Management – Fifth Edition, Tata McGraw Hill, New Delhi, 2012.
2. Robert K. Wysocki, Effective Software Project Management – Wiley Publication, 2011.</item>
    </string-array>
    <string-array name="DBMS">
        <item>Introduction, Purpose of Database Systems, Database-System Applications, View of Data, Database Languages, Database System Structure, Data Models, Database Design and ER Model: Entity, Attributes, Relationships, Constraints, Keys, Design Process, Entity-Relationship Model, ER Diagram, Design Issues, Extended E-R Features, converting E-R and EER diagram into tables.</item>
        <item>SQL: Characteristics and advantages, SQL Data Types and Literals, DDL, DML, DCL, TCL, SQL Operators, Tables: Creating, Modifying, Deleting, Updating, SQL DML Queries: SELECT Query and clauses, Index and Sequence in SQL, Views: Creating, Dropping, Updating using Indexes, Set Operations, Predicates and Joins, Set membership, Tuple Variables, Set comparison, Ordering of Tuples, Aggregate Functions, SQL Functions, Nested Queries, PL/SQL: Concept of Stored Procedures and Functions, Cursors, Triggers, Assertions, Roles and Privileges</item>
        <item>Relational Model: Basic concepts, Attributes and Domains, CODDs Rules, Relational Integrity: Domain, Referential Integrities, Enterprise Constraints, Database Design: Features of Good Relational Designs, Normalization, Atomic Domains and First Normal Form, Decomposition using Functional Dependencies, Algorithms for Decomposition, 2NF, 3NF, BCNF.</item>
        <item>Transaction concept, Transaction states, ACID properties, Concept of Schedule, Serial Schedule, Serializability: Conflict and View, Cascaded Aborts, Recoverable and Non-recoverable Schedules, Concurrency Control: Lock-based, Time-stamp based Deadlock handling, Recovery methods: Shadow-Paging and Log-Based Recovery, Checkpoints.</item>
        <item>NoSQL Database : Introduction, Need, Features, Types of NoSQL Databases: Key-value store, document store, graph, wide column stores; BASE Properties, Data Consistency model ACID Vs BASE, Comparative study of RDBMS and NoSQL, MongoDB (with syntax and usage): CRUD Operations, Indexing, Aggregation, MapReduce, Replication, Sharding.</item>
        <item>Complex Data Types: Semi-Structured Data: Features of Semi-Structured Data Models, Nested Data Types: JSON, XML, Object Orientation: Object-Relational Database System, Table Inheritance, Object-Relational Mapping, Spatial Data: Geographic Data, Geometric Data.</item>
        <item>1. Silberschatz A., Korth H., Sudarshan S., "Database System Concepts", McGraw Hill
Publishers, ISBN 0-07-120413-X, 6th edition
2. Connally T, Begg C., "Database Systems", Pearson Education, ISBN 81-7808-861-4
3. Pramod J. Sadalage and Martin Fowler, ―NoSQL Distilled, Addison Wesley, ISBN-
10: 0321826620, ISBN-13: 978-0321826626</item>
    </string-array>
</resources>