<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    tools:ignore="RtlSymmetry">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.example.timetableapp.util.LetterImageView
            android:id="@+id/ivLetterFaculty"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/tvFaculty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/ivLetterFaculty"
            android:text="@string/tvMain"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescriptionFaculty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFaculty"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@+id/ivLetterFaculty"
            android:text="@string/tvDescription"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ivLetterFaculty"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="0dp"
            android:text="@string/click"
            android:textSize="12sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
