<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    tools:ignore="RtlSymmetry">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivMain"
            android:layout_width="80dp"
            android:layout_height="105dp"
            android:layout_marginStart="10dp"
            android:rotationX="-8"
            android:contentDescription="@string/click" />

        <TextView
            android:id="@+id/tvMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/ivMain"
            android:text="@string/tvMain"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMain"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@+id/ivMain"
            android:text="@string/tvDescription"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ivMain"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/click"
            android:textSize="12sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
