<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FacultyInfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarFacultyInfo"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_width="match_parent"
        app:titleTextColor="@color/white"
        android:background="@color/purple_700">
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:layout_below="@+id/toolbarFacultyInfo">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cvFaculty"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/user_image"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tvFacultyName"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cvFaculty"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"/>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardElevation="4dp"
        android:layout_below="@+id/rl1"
        tools:ignore="RtlSymmetry">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvFacultyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="24sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/tvLine"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@id/tvFacultyTitle"
                android:background="@color/black"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tvFacultyPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:text="@string/tvMain"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="20sp"
                android:padding="2sp"
                android:layout_below="@id/tvLine"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardElevation="4dp"
        android:layout_below="@+id/cv1"
        tools:ignore="RtlSymmetry">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvFacultyTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="24sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/tvLine2"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@id/tvFacultyTitle2"
                android:background="@color/black"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tvFacultyEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:text="@string/tvMain"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="20sp"
                android:padding="2sp"
                android:layout_below="@id/tvLine2"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>